Added refresh to the news controller.

--- a/App/Base.lproj/Main.storyboard
+++ b/App/Base.lproj/Main.storyboard
@@ -317,6 +317,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="Nxa-tY-DVV"/>
+        <segue reference="dpr-eK-A74"/>
     </inferredMetricsTieBreakers>
 </document>
