--- a/App/Base.lproj/Main.storyboard
+++ b/App/Base.lproj/Main.storyboard
@@ -69,7 +69,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="tNa-Rx-eud" kind="custom" identifier="Home" customClass="SWRevealViewControllerSegue" id="MGZ-u9-nqX"/>
+                                    <segue destination="tNa-Rx-eud" kind="custom" customClass="SWRevealViewControllerSegue" id="HSl-AU-4yY"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="news" id="AmV-bf-m7g">
@@ -89,7 +89,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="ncx-yl-juI" kind="custom" customClass="SWRevealViewControllerSegue" id="wW5-eD-iTB"/>
+                                    <segue destination="ncx-yl-juI" kind="custom" customClass="SWRevealViewControllerSegue" id="K6t-2T-vAp"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="statistics" id="hyT-CI-R62">
@@ -109,7 +109,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="jXI-Qk-iGk" kind="custom" customClass="SWRevealViewControllerSegue" id="gV5-sv-zqt"/>
+                                    <segue destination="jXI-Qk-iGk" kind="custom" customClass="SWRevealViewControllerSegue" id="VHz-lz-6l8"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="teams" id="A52-ET-1aB">
@@ -129,7 +129,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="7Vv-Hs-o4D" kind="custom" identifier="teams" customClass="SWRevealViewControllerSegue" id="F4p-iB-ILc"/>
+                                    <segue destination="7Vv-Hs-o4D" kind="custom" customClass="SWRevealViewControllerSegue" id="dlu-GT-xaJ"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="schedule" id="Slx-K5-7ZN">
@@ -149,7 +149,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="T48-Wm-db9" kind="custom" customClass="SWRevealViewControllerSegue" id="D4p-PB-rKd"/>
+                                    <segue destination="T48-Wm-db9" kind="custom" customClass="SWRevealViewControllerSegue" id="ADt-Jf-fHm"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="now" id="OvK-rE-EAI">
@@ -169,7 +169,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="JfY-h4-ngk" kind="custom" customClass="SWRevealViewControllerSegue" id="ZKo-UG-aip"/>
+                                    <segue destination="JfY-h4-ngk" kind="custom" customClass="SWRevealViewControllerSegue" id="Tdc-iz-Jb3"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="standings" id="lZL-kF-5gg">
@@ -189,7 +189,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="3zQ-6X-c1E" kind="custom" customClass="SWRevealViewControllerSegue" id="0LT-7h-JZo"/>
+                                    <segue destination="3zQ-6X-c1E" kind="custom" customClass="SWRevealViewControllerSegue" id="bCZ-G4-tAt"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Settings" id="Jkr-yF-vVy">
@@ -209,7 +209,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="h6c-nC-v23" kind="custom" customClass="SWRevealViewControllerSegue" id="QAz-7s-C9S"/>
+                                    <segue destination="h6c-nC-v23" kind="custom" customClass="SWRevealViewControllerSegue" id="u1M-TC-rJZ"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Video" id="cmb-Uv-t64">
@@ -229,7 +229,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="n1p-2d-XnR" kind="custom" customClass="SWRevealViewControllerSegue" id="6hR-ZW-Ej3"/>
+                                    <segue destination="n1p-2d-XnR" kind="custom" customClass="SWRevealViewControllerSegue" id="3dE-FG-gOt"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -253,7 +253,6 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="sideBarButton" destination="INV-yQ-hje" id="Lpr-db-NYq"/>
-                        <outlet property="sideBarButton6" destination="INV-yQ-hje" id="OLm-Nb-JQf"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7KA-O0-jUo" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -264,30 +263,14 @@
         <scene sceneID="c7o-tB-BnY">
             <objects>
                 <viewController id="JfY-h4-ngk" customClass="AUDLNowViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="ASO-FB-Emf"/>
-                        <viewControllerLayoutGuide type="bottom" id="GWX-5u-8F2"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="31c-h0-zgo">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="w9c-OC-eMU">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem id="H9V-kI-2Gv">
-                                        <barButtonItem key="leftBarButtonItem" title="Menu" id="y0g-z8-oKe"/>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="BEY-WL-kw7">
+                        <barButtonItem key="leftBarButtonItem" title="Menu" id="pXM-J7-gkl"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="sidebarButton" destination="y0g-z8-oKe" id="NoH-2q-4Cj"/>
+                        <outlet property="sidebarButton" destination="pXM-J7-gkl" id="Qrl-98-He3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o8p-ll-3Ju" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -322,7 +305,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="sidebarButton0" destination="1fZ-7w-q0M" id="4tl-x8-84n"/>
+                        <outlet property="sidebarButton" destination="1fZ-7w-q0M" id="zCB-d5-db6"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eiV-qe-smf" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -386,7 +369,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="sidebarButton2" destination="Jg5-6O-mzd" id="vWS-Hy-8YT"/>
+                        <outlet property="sidebarButton" destination="Jg5-6O-mzd" id="oBK-Yo-YbN"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aJO-eS-8Y2" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -403,7 +386,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="sidebarButton5" destination="oQa-Gk-rCu" id="fC8-bf-f8M"/>
+                        <outlet property="sidebarButton" destination="oQa-Gk-rCu" id="Iah-g3-TxT"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KwW-xO-wNA" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -420,7 +403,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="sidebarButton3" destination="cgF-r0-6vq" id="RxX-x0-N9n"/>
+                        <outlet property="sidebarButton" destination="cgF-r0-6vq" id="oSp-Py-F0g"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sVf-LF-cjk" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -437,7 +420,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="sidebarButton4" destination="25Q-h0-IDk" id="zfS-dr-Ilc"/>
+                        <outlet property="sidebarButton" destination="25Q-h0-IDk" id="U6T-sO-0dY"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4ne-ZG-egr" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -451,6 +434,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="MGZ-u9-nqX"/>
+        <segue reference="HSl-AU-4yY"/>
     </inferredMetricsTieBreakers>
 </document>
