--- a/App/Base.lproj/Main.storyboard
+++ b/App/Base.lproj/Main.storyboard
@@ -277,6 +277,29 @@
             </objects>
             <point key="canvasLocation" x="1409" y="-306"/>
         </scene>
+        <!--Team View Controller - Title-->
+        <scene sceneID="N3x-iA-6mQ">
+            <objects>
+                <tableViewController id="2Ws-tK-dHP" customClass="TeamViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="v1R-kJ-mWA">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <connections>
+                            <outlet property="dataSource" destination="2Ws-tK-dHP" id="C3d-4S-A8C"/>
+                            <outlet property="delegate" destination="2Ws-tK-dHP" id="0yW-DU-AbO"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Title" id="uqQ-tJ-5Rd">
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="VxM-QM-V42"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UGK-fD-D0m" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="583" y="-1801"/>
+        </scene>
         <!--Teams Table View Controller-->
         <scene sceneID="czx-bR-dw8">
             <objects>
