--- a/App/Base.lproj/Main.storyboard
+++ b/App/Base.lproj/Main.storyboard
@@ -263,6 +263,15 @@
         <scene sceneID="c7o-tB-BnY">
             <objects>
                 <viewController id="JfY-h4-ngk" customClass="AUDLNowViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="vHC-mq-eav">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <connections>
+                            <outlet property="dataSource" destination="JfY-h4-ngk" id="X6U-UI-LWD"/>
+                            <outlet property="delegate" destination="JfY-h4-ngk" id="0Lo-a6-vG2"/>
+                        </connections>
+                    </tableView>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="BEY-WL-kw7">
                         <barButtonItem key="leftBarButtonItem" title="Menu" id="pXM-J7-gkl"/>
@@ -270,12 +279,13 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="nowTableView" destination="vHC-mq-eav" id="NMO-Uk-TeL"/>
                         <outlet property="sidebarButton" destination="pXM-J7-gkl" id="Qrl-98-He3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o8p-ll-3Ju" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1409" y="-306"/>
+            <point key="canvasLocation" x="1491" y="-290"/>
         </scene>
         <!--Team View Controller - Title-->
         <scene sceneID="N3x-iA-6mQ">
