--- a/App/AUDLScheduleTableViewCell.xib
+++ b/App/AUDLScheduleTableViewCell.xib
@@ -43,12 +43,22 @@
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4cd-sV-Bmm">
+                        <rect key="frame" x="30" y="20" width="45" height="45"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lyd-Os-hn4">
+                        <rect key="frame" x="245" y="20" width="45" height="45"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
                 </subviews>
             </tableViewCellContentView>
             <connections>
                 <outlet property="date" destination="v6h-od-qSz" id="omQ-Bk-b3m"/>
                 <outlet property="teamOne" destination="NeM-hc-7RP" id="WDe-Tf-s0b"/>
+                <outlet property="teamOneIcon" destination="4cd-sV-Bmm" id="AFc-Hf-JJb"/>
                 <outlet property="teamTwo" destination="zNN-9a-bRm" id="nOx-Qr-E90"/>
+                <outlet property="teamTwoIcon" destination="lyd-Os-hn4" id="sCI-Ne-ydP"/>
                 <outlet property="time" destination="QEq-o6-hXJ" id="qsw-P4-NDI"/>
             </connections>
         </tableViewCell>
